<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="175dp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <LinearLayout
                android:padding="4dp"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/iv_flag"
                    android:padding="5dp"
                    android:src="@drawable/ic_list_view"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/str_icon" />
                <TextView
                    android:id="@+id/tv_country_name"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/placeholder_country"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:tint="@color/colorConfirmedStatus"
                    android:src="@drawable/ic_confirm"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/str_icon" />
                <TextView
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorConfirmedStatus"
                    android:text="@string/confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_country_confirmed_count"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder_number"
                android:textColor="@color/colorConfirmedStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:tint="@color/colorRecoveredStatus"
                    android:src="@drawable/ic_recovered"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/str_icon" />
                <TextView
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorRecoveredStatus"
                    android:text="@string/recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_country_recovered_count"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder_number"
                android:textColor="@color/colorRecoveredStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:tint="@color/colorDeathStatus"
                    android:src="@drawable/ic_dead"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/str_icon" />
                <TextView
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorDeathStatus"
                    android:text="@string/deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_country_deaths_count"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/placeholder_number"
                android:textColor="@color/colorDeathStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>