<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <com.github.mikephil.charting.charts.PieChart-->
<!--        android:id="@+id/chart1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_title"
        android:text="@string/world_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/colorBlack"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_date"
        android:text="@string/placeholder_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_margin="16dp"
        android:id="@+id/iv_social_distancing"
        android:src="@drawable/social_distance"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_world_confirmed_stats"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/str_icon" />
    <LinearLayout
        android:id="@+id/ll_world_confirmed_stats"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/status_border_confirmed"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_world_recovered_stats"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:tint="@color/colorConfirmedStatus"
            android:src="@drawable/ic_confirm"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/str_icon" />
        <TextView
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorConfirmedStatus"
            android:text="@string/confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorConfirmedStatus"
                    android:text="@string/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_world_confirm_total"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorConfirmedStatus"
                    android:text="@string/placeholder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorConfirmedStatus"
                    android:text="@string/str_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_world_confirm_new"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorConfirmedStatus"
                    android:text="@string/placeholder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_world_recovered_stats"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/status_border_recovered"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_world_deaths_stats"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:tint="@color/colorRecoveredStatus"
            android:src="@drawable/ic_recovered"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/str_icon" />
        <TextView
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorRecoveredStatus"
            android:text="@string/recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorRecoveredStatus"
                    android:text="@string/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_world_recover_total"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorRecoveredStatus"
                    android:text="@string/placeholder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorRecoveredStatus"
                    android:text="@string/str_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_world_recover_new"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorRecoveredStatus"
                    android:text="@string/placeholder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_world_deaths_stats"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/status_border_deaths"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rl_countries"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:tint="@color/colorDeathStatus"
            android:src="@drawable/ic_dead"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/str_icon" />
        <TextView
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorDeathStatus"
            android:text="@string/deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorDeathStatus"
                    android:text="@string/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_world_deaths_total"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorDeathStatus"
                    android:text="@string/placeholder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorDeathStatus"
                    android:text="@string/str_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_world_deaths_new"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/colorDeathStatus"
                    android:text="@string/placeholder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_countries"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/rv_countries_stats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:onClick="onClickAllCountries"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_list_view"
            android:layout_alignParentEnd="true"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/str_icon" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/cardview_country_stats_home"
        android:id="@+id/rv_countries_stats"
        tools:itemCount="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>