<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorConfirmedStatus"
            android:textStyle="bold"
            android:id="@+id/tv_date"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/placeholder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/colorConfirmedStatus"
            android:id="@+id/tv_selected_status"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/active_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            android:tint="@color/colorConfirmedStatus"
            android:id="@+id/iv_confirm_icon"
            android:contentDescription="@string/str_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_confirm"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <TextView
            android:id="@+id/tv_day_confirmed"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textColor="@color/colorConfirmedStatus"
            android:text="@string/placeholder_number"
            app:layout_constraintBottom_toBottomOf="@id/iv_confirm_icon"
            app:layout_constraintTop_toTopOf="@id/iv_confirm_icon"
            app:layout_constraintStart_toEndOf="@id/iv_confirm_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            app:layout_constraintBottom_toBottomOf="@id/iv_confirm_icon"
            app:layout_constraintTop_toTopOf="@id/iv_confirm_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:tint="@color/colorRecoveredStatus"
                android:id="@+id/iv_recover_icon"
                android:contentDescription="@string/str_icon"
                android:src="@drawable/ic_recovered"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <TextView
                android:id="@+id/tv_day_recovered"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/colorRecoveredStatus"
                android:text="@string/placeholder_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageView
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/tv_day_deaths"
            android:tint="@color/colorDeathStatus"
            android:id="@+id/iv_death_icon"
            android:contentDescription="@string/str_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_confirm_icon"
            app:layout_constraintTop_toTopOf="@id/iv_confirm_icon"
            android:src="@drawable/ic_dead"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <TextView
            android:id="@+id/tv_day_deaths"
            android:textSize="16sp"
            android:textColor="@color/colorDeathStatus"
            android:text="@string/placeholder_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_confirm_icon"
            app:layout_constraintTop_toTopOf="@id/iv_confirm_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
